--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="./libs/crossfilter.js"></script>
 	<script src="./libs/d3.slider.js"></script>
 	<link rel="stylesheet" href="./libs/d3.slider.css"></link>
-	<script src="./libs/nvd3.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/nvd3/1.1.15-beta/nv.d3.min.js"></script>
     <script src="./libs/queue.v1.min.js"></script>
 
 	<!-- Bootstrap -->
@@ -28,7 +28,7 @@
 	<script src="./src/layer.js"></script>
 	<script src="./src/queries.js"></script>
 	<script src="./src/dataprocessing.js"></script>
-	<link rel="stylesheet" href="./libs/nvd3.css" />
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/nvd3/1.1.15-beta/nv.d3.min.css" />
 	<link rel="stylesheet" href="./css/main.css" />
     
     <!-- CUSTOM--> 
@@ -57,7 +57,7 @@
 		fill: none;
 	}
 	
-	#maptooltip {
+	.maptooltip {
 		position: absolute;
 	}
 	
@@ -166,6 +166,9 @@ var axis = d3.svg.axis().tickFormat(function(d){
 });
 var starttime = 1335830400000;
 var endtime = 1371859200000;
+//FIXME: month and week are incorrect
+var monthstep = 30 * 24 * 60 * 60 * 1000; //day * hr * sec * ms
+var weekstep = 7 * 24 * 60 * 60 * 1000; //day * hr * sec * ms
 var daystep = 24 * 60 * 60 * 1000; //day * hr * sec * ms
 var hourstep = 60 * 60 * 1000;
 var timestep = daystep;
@@ -177,11 +180,12 @@ var timescale_weather = d3.scale.linear().domain([weatherT0, weatherTMax]).range
 
 var map = new lodui.map('map', {center: [4.740008,52.892394]});
 var colorscale = d3.scale.linear().domain([-5,20]).range([0,255]);
-var timechange = function(){
-	var value = slider.valueAsNumber;
+var timechange = function(timestamp){
+	//var value = slider.valueAsNumber;
+	var value = timestamp;
 	var time = new Date(value);
 	//console.log(time);
-	var index = scale(value) >>> 0;
+	var index = Math.round(scale(value));
 	//Calculate the radius for the meters
 	d3.select('#meters').selectAll('circle').each(function(d){
 		if (d.data && d.data.length > 0 && d.activemeasure[index]){
@@ -191,10 +195,10 @@ var timechange = function(){
 			var sum = 0;
 		}
 		d.sum = sum;
-		d.r = (sum * 10) + 2; //2 is the minimum for a circle
+		d.r = (sum * 50) + 2; //2 is the minimum for a circle
 	});
 	//Calculate the radius for the weatherstations
-	var index = timescale_weather(value) >>> 0;
+	var index = Math.round(timescale_weather(value));
 	var temp = Math.round(weatherdata.tempmeasure[index].value);
 	var sun = Math.round(weatherdata.sunmeasure[index].value);
 	
@@ -207,21 +211,24 @@ var timechange = function(){
 	
 	d3.select('#temp').transition().duration(50)
 		.style('width',(temp) + 'px').style('background', 'rgb('+colorscale(temp)+',0,0)');
-	d3.select('#temp').html(temp + ' deg');
+	d3.select('#temp').html((temp/10) + ' deg');
 	
 	d3.select('#infobox').html(time + ' temperature: ' + temp + ' sun Q: ' + sun);
 	map.redraw(); 
 }
 
-var timeslider = d3.select('#bottomoverlay').append('input').attr('id','slider')
-	.attr('type','range').attr('min', starttime).attr('max', endtime).attr('value',starttime).attr('step', daystep )
-	.on('input',timechange)
-	.on('change', timechange);
-var slider = timeslider[0][0];
+//var timeslider = d3.select('#bottomoverlay').append('input').attr('id','slider')
+//	.attr('type','range').attr('min', starttime).attr('max', endtime).attr('value',starttime).attr('step', daystep )
+//	//.on('input',timechange)
+//	//.on('change', timechange);
+//var slider = timeslider[0][0];
 
 var intervalSelector = d3.select('#rightoverlay').append('select').classed('form-control',true).style('width','100px');
-intervalSelector.append('option').attr('value',daystep).html('day');
+intervalSelector.append('option').attr('value',monthstep).html('month');
+intervalSelector.append('option').attr('value',weekstep).html('week');
+intervalSelector.append('option').attr('value',daystep).attr('selected',true).html('day');
 intervalSelector.append('option').attr('value',hourstep).html('hour');
+var weatherchart;
 intervalSelector.on('change', function(d){
 	var self = this;
 	timestep = this.value;
@@ -233,6 +240,12 @@ intervalSelector.on('change', function(d){
 		}
 		else if (self.value == daystep) {
 			d.activemeasure = d.bydaymeasure;
+		}
+		else if (self.value == weekstep) {
+			d.activemeasure = d.byweekmeasure;
+		}
+		else if (self.value == monthstep) {
+			d.activemeasure = d.bymonthmeasure;
 		};
 	});
 	if (this.value == hourstep){
@@ -242,9 +255,17 @@ intervalSelector.on('change', function(d){
 	else if (this.value == daystep) {
 		weatherdata.sunmeasure = weatherdata.bydaysun;
 		weatherdata.tempmeasure = weatherdata.bydaytemperature;
+	}
+	else if (this.value == weekstep) {
+		weatherdata.sunmeasure = weatherdata.byweeksun;
+		weatherdata.tempmeasure = weatherdata.byweektemperature;
+	}
+	else if (this.value == monthstep) {
+		weatherdata.sunmeasure = weatherdata.bymonthsun;
+		weatherdata.tempmeasure = weatherdata.bymonthtemperature;
 	};
 	
-	timeslider.attr('step',parseInt(this.value));
+	//timeslider.attr('step',parseInt(this.value));
 	
 	var data = [{
 		"key": "Sun",
@@ -261,6 +282,7 @@ intervalSelector.on('change', function(d){
 
 var playinterval;
 var playbutton = d3.select('#rightoverlay').append('button').classed('btn btn-primary',true).on('click', function(){
+	/*TODO: change to nvd3 graph effect
 	var slider = timeslider[0][0];
 	slider.value = starttime;
 	playinterval = window.setInterval(
@@ -272,9 +294,10 @@ var playbutton = d3.select('#rightoverlay').append('button').classed('btn btn-pr
 			timechange();
 		}
 	,500);
+	*/
 }).html('Play');
 var stopbutton = d3.select('#rightoverlay').append('button').classed('btn btn-default',true).on('click', function(){
-	clearInterval(playinterval);
+	//clearInterval(playinterval);
 }).html('Stop');
 
 
@@ -295,17 +318,19 @@ var querymeter = function(d){
 	var request_url = queries.getMeterValues(meter);
 	var address = d.properties;
 	var data = null;
-	//Add 
+	//Add meterdata to the meters
 	d3.csv(request_url, function(response){
 		loadedMeters++;
 		d.data = response;
 		var cf = crossfilter(response);
 
-		d.bymonth = cf.dimension(function(d) { return d3.time.month(new Date(d.tijd)); });
-		d.byweek = cf.dimension(function(d) { return d3.time.week(new Date(d.tijd)); });
-		d.byday = cf.dimension(function(d) { return d3.time.day(new Date(d.tijd)); });
-		d.byhour = cf.dimension(function(d) { return d.tijd;});
+		d.bymonth = cf.dimension(function(d) { return d3.time.month(new Date(d.tijd)).getTime(); });
+		d.byweek = cf.dimension(function(d) { return d3.time.week(new Date(d.tijd)).getTime(); });
+		d.byday = cf.dimension(function(d) { return d3.time.day(new Date(d.tijd)).getTime(); });
+		d.byhour = cf.dimension(function(d) { return new Date(d.tijd).getTime();});
 		
+		d.bymonthmeasure = d.byday.group().reduceSum(function(d){return d.waarde / (24 * 30);}).all();
+		d.byweekmeasure = d.byday.group().reduceSum(function(d){return d.waarde / (24 * 7);}).all();
 		d.bydaymeasure = d.byday.group().reduceSum(function(d){return d.waarde / 24;}).all();
 		d.byhourmeasure = d.byhour.group().reduceSum(function(d){return d.waarde;}).all();
 		d.activemeasure = d.bydaymeasure;
@@ -318,12 +343,12 @@ var querymeter = function(d){
 
 var addGraphs  = function(data){
 		nv.addGraph(function() {
-		  var chart = nv.models.lineWithFocusChart()
+		  //var chart = nv.models.lineWithFocusChart()
+		  var chart = nv.models.lineChart()
 					.x(function(d) { return d[0] })
 					.y(function(d) { return d[1] }) //adjusting, 100% is 1.00, not 100 as it is in the data
 					.color(d3.scale.category10().range())
-					//.useInteractiveGuideline(true)
-					  ;
+					.useInteractiveGuideline(true);
 
 		  chart.xAxis
 			.tickValues([1335830400000,1371859200000])
@@ -331,25 +356,30 @@ var addGraphs  = function(data){
 				return d3.time.format('%x')(new Date(d))
 			  });
 		
-		chart.x2Axis
-			.tickValues([1335830400000,1371859200000])
-			.tickFormat(function(d) {
-				return d3.time.format('%x')(new Date(d))
-			  });	  
+		//chart.x2Axis
+		//	.tickValues([1335830400000,1371859200000])
+		//	.tickFormat(function(d) {
+		//		return d3.time.format('%x')(new Date(d))
+		//	  });	  
 
 		  chart.yAxis
 			  .tickFormat(d3.format(',.2f'));
 
-		  chart.y2Axis
-			  .tickFormat(d3.format(',.2f'));
+		//  chart.y2Axis
+		//	  .tickFormat(d3.format(',.2f'));
 
 		  d3.select('#chart svg')
 			  .datum(data)
 			  .transition().duration(500)
 			  .call(chart);
 
+			  
+			chart.interactiveLayer.dispatch.on('elementMousemove.x', function(d){
+				var timestamp = Math.round(d.pointXValue);
+				timechange(timestamp);
+			});
 		  nv.utils.windowResize(chart.update);
-
+		  weatherchart = chart;
 		  return chart;
 		});
 }
@@ -357,33 +387,34 @@ var addGraphs  = function(data){
 var weatherdata = {};
 var weathergraph = null;
 var getWeatherData = function(){
-	d3.csv('./data/weatherstations_hourly.csv', function(response){
+	d3.csv('./data/station_210.csv', function(response){
 		var d = weatherdata;
 		d.data = response;
 		var cf = crossfilter(response);
 		d.bystation = cf.dimension(function(d){ return d.STN});
 		d.bystation.filter(210); //only station 210 for now
-		d.byday = cf.dimension(function(d){ 
-			var string = d.YYYYMMDD;
-			var year = string.substr(0,4);
-			var month = string.substr(4,2);
-			var day = string.substr(6,2);
-			var date = new Date(year, month, day).getTime();
-			return date;
-		});
-		d.byhour = cf.dimension(function(d){
+		
+		var date = function(d){
 			//Trick to add zero padding to hour so it orders correctly
 			var string = d.YYYYMMDD;
 			var year = string.substr(0,4);
 			var month = string.substr(4,2);
 			var day = string.substr(6,2);
 			var hour = parseInt(d.HH);
-			var date = new Date(year, month, day,hour).getTime();
-			return date;
-		});
-		d.bydaytemperature = d.byday.group().reduceSum(function(d){return d.T / 24;}).all();
+			return new Date(year, month, day,hour);
+		}
+		d.bymonth = cf.dimension(function(d) { return d3.time.month(date(d)).getTime(); });
+		d.byweek = cf.dimension(function(d) { return d3.time.week(date(d)).getTime(); });
+		d.byday = cf.dimension(function(d) { return d3.time.day(date(d)).getTime(); });
+		d.byhour = cf.dimension(function(d) { return date(d).getTime();});
+		//FIXME: use real month and week measures
+		d.bymonthtemperature = d.bymonth.group().reduceSum(function(d){return d.T / (10 * 24 * 30);}).all();
+		d.bymonthsun = d.bymonth.group().reduceSum(function(d){return d.Q / (24 * 30);}).all();
+		d.byweektemperature = d.byweek.group().reduceSum(function(d){return d.T / (10 * 24 * 7);}).all();
+		d.byweeksun = d.byweek.group().reduceSum(function(d){return d.Q / (24 * 7);}).all();
+		d.bydaytemperature = d.byday.group().reduceSum(function(d){return d.T / (10 * 24);}).all();
 		d.bydaysun = d.byday.group().reduceSum(function(d){return d.Q / 24;}).all();
-		d.byhourtemperature = d.byhour.group().reduceSum(function(d){return d.T;}).all();
+		d.byhourtemperature = d.byhour.group().reduceSum(function(d){return d.T / 10;}).all();
 		d.byhoursun = d.byhour.group().reduceSum(function(d){return d.Q;}).all();
 		d.sunmeasure = d.bydaysun;
 		d.tempmeasure = d.bydaytemperature;
@@ -406,12 +437,50 @@ var getWeatherData = function(){
 	});
 }
 
-/** Show a tooltip with meterinfo **/
+/** Show a popover with meterinfo **/
 var meterinfo = function(d,e){
 	var loc = d3.mouse(d3.select('#map')[0][0]);
-	var div = d3.select('#maptooltip');
-	div.style('left', loc[0] + 20 + 'px').style('top', loc[1] + 5 + 'px').html(d.sum + ' m3 gas');
-	div.classed("mouseover label label-primary", true).style('display','block');
+	var div = d3.select('#map').append('div').classed('maptooltip panel panel-primary',true)
+		.style('left', loc[0] + 20 + 'px').style('top', loc[1] + 5 + 'px').on('click',function(d){d3.select(this).remove();});
+	div.append('div').classed('panel-heading',true).html(d.id);
+	div.append('div').classed('panel-body',true).html(d.sum + ' m3 gas');
+	div.classed("label label-primary", true).style('display','block');
+	var data = [{
+			"key": "Gas",
+			"values": []
+		}];
+		//Map the values so we can use them in the graph
+		data[0].values = d.activemeasure.map(function(d){return [d.key, d.value]});
+	nv.addGraph(function() {
+	  var chart = nv.models.lineChart()
+					.x(function(d) { return d[0] })
+					.y(function(d) { return d[1] }) //adjusting, 100% is 1.00, not 100 as it is in the data
+					.margin({left: 50})  //Adjust chart margins to give the x-axis some breathing room.
+					.useInteractiveGuideline(true)  //We want nice looking tooltips and a guideline!
+					.transitionDuration(350)  //how fast do you want the lines to transition?
+					.showLegend(true)       //Show the legend, allowing users to turn on/off line series.
+					.showYAxis(true)        //Show the y-axis
+					.showXAxis(true)        //Show the x-axis
+	  ;
+
+	  chart.xAxis     //Chart x-axis settings
+		  .tickValues([1335830400000,1371859200000])
+			.tickFormat(function(d) {
+				return d3.time.format('%x')(new Date(d))
+			  });
+
+	  chart.yAxis     //Chart y-axis settings
+		  .axisLabel('m3')
+		  .tickFormat(d3.format(',.2f'));
+
+	  div.append('svg').attr('width',300).attr('height',200)    //Select the <svg> element you want to render the chart in.   
+		  .datum(data)         //Populate the <svg> element with chart data...
+		  .call(chart);          //Finally, render the chart!
+
+	  //Update the chart when window resizes.
+	  nv.utils.windowResize(function() { chart.update() });
+	  return chart;
+	});
 }
 
 /** Define weatherstation layer **/
@@ -447,17 +516,18 @@ d3.csv('./data/weerstations.csv', function(response){
 
 /** Define meters layer **/
 
+var hightlight = function(d, elem){
+	d3.selectAll('circle').style('fill','steelBlue');
+	//d3.select(this).style('fill', 'orange');
+}
+
 var meterslayer = map.layers('meters', {
 	type: 'point',
 	style: {
 		fill: 'red'
 	},
-	onmouseover: meterinfo,
-	onclick: function(d, elem){
-		d3.selectAll('circle').style('fill','steelBlue');
-		d3.select(elem).style('fill', 'orange');
-		//querymeter(d);
-		}
+	onmouseover: hightlight,
+	onclick: meterinfo
 });
 
 
